refactor : warning 제거
- Controller 계층의 @PathVariable 값 제거
- Java 21에 추가된 메서드(~First(), ~Last)로 변경
- 미사용 import 제거
- 컴파일 오류 수정